@@ -1,16 +1,12 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
 	id("org.springframework.boot") version "2.3.0.RELEASE"
 	id("io.spring.dependency-management") version "1.0.9.RELEASE"
-	kotlin("jvm") version "1.3.72"
-	kotlin("plugin.spring") version "1.3.72"
-	kotlin("kapt") version "1.3.72"
+	java
 }
 
 group = "de.dstoll"
 version = "0.0.1-SNAPSHOT"
-java.sourceCompatibility = JavaVersion.VERSION_11
+java.sourceCompatibility = JavaVersion.VERSION_14
 
 repositories {
 	mavenCentral()
@@ -25,26 +21,28 @@ dependencies {
 	implementation("org.webjars:jquery:3.1.1-1")
 	implementation("org.webjars:sockjs-client:1.0.2")
 	implementation("org.webjars:stomp-websocket:2.3.3")
-	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	implementation("org.springframework.kafka:spring-kafka")
+	compileOnly("org.projectlombok:lombok")
+	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+	annotationProcessor("org.projectlombok:lombok")
 	testImplementation("org.springframework.boot:spring-boot-starter-test") {
 		exclude(group = "org.junit.vintage", module = "junit-vintage-engine")
 	}
 	testImplementation("org.springframework.kafka:spring-kafka-test")
-	kapt("org.springframework.boot:spring-boot-configuration-processor")
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("--enable-preview")
 }
 
-tasks.withType<KotlinCompile> {
+tasks.withType<JavaCompile> {
 	dependsOn("unzip-data")
-	kotlinOptions {
-		freeCompilerArgs = listOf("-Xjsr305=strict")
-		jvmTarget = "1.8"
-	}
+	options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+	jvmArgs("--enable-preview")
 }
 
 tasks.register<Copy>("unzip-data") {
